--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,90 @@ th, td {
 .link-container a:hover {
     background-color: #555; /* Cambiar color al pasar el mouse */
 }
+
+/* estilos de indice */
+*{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
+
+.banner{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0,40), rgba(0,0,0,40));
+    background-position: center;
+    background-size: center;
+}
+
+.navbar{
+    width: 90%;
+    padding: 30px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    width: 160px;
+    margin-top: -10px;
+    cursor: pointer;
+}
+
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 20px;
+}
+
+.navbar ul li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 600;
+}
+
+li a:hiver{
+    background: white;
+    transition: 0,5s;
+}
+
+.navbar a:hover{
+    color: black;
+}
+
+.content{
+    width: 100%;
+    position: absolute;
+    color: white;
+    top: 45%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+
+.content h2{
+    margin-top: 80px;
+    font-size: 90px;
+    font-weight: 800;
+}
+
+.texto{
+    margin-top: 22px;
+    font-size: 22px;
+    font-weight: 22;
+}
+
+.banner video{
+    position: absolute;
+    right: 0;
+    z-index: -1;
+}
+
+@media(min-aspect-ratio: 16/9){
+    .banner video{
+        width: 100%;
+        height: auto;
+    }
+}
